fix: dark mode false colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,10 +47,10 @@ body {
   background: -webkit-linear-gradient(-90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 30%, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0) 80%);
   -webkit-background-clip: text;
   -webkit-text-stroke: 1px transparent;
-  @media (prefers-color-scheme: dark) {
+  /* @media (prefers-color-scheme: dark) {
     color: black !important;
   }
-  color: black !important;
+  color: black !important; */
 }
 
 @media only screen and (min-width: 1024px) {
